# my_FastAPI

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  Readme.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
app/api/v1/: endpoints.py  wall.py
app/core/: config.py  redis.py  security.py  utils.py
app/services/: wall.py
app/static/: index.html
nginx/: nginx.conf  templates.conf
nginx/templates/: default.conf.template
